--- a/eladmin/eladmin-system/pom.xml
+++ b/eladmin/eladmin-system/pom.xml
@@ -19,6 +19,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.milvus</groupId>
+            <artifactId>milvus-sdk-java</artifactId>
+            <version>2.0.0</version>
+        </dependency>
         <!-- 代码生成模块 -->
         <dependency>
             <groupId>me.zhengjie</groupId>
