--- a/eladmin/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin/eladmin-system/src/main/resources/config/application-dev.yml
@@ -119,3 +119,13 @@ file:
   # 文件大小 /M
   maxSize: 100
   avatarMaxSize: 5
+
+
+spring:
+  elasticsearch:
+    rest:
+      uris: http://localhost:9200
+      username: elastic
+      password: 123456
+      connection-timeout: 5000
+      read-timeout: 5000
