--- a/eladmin/pom.xml
+++ b/eladmin/pom.xml
@@ -40,6 +40,23 @@
     </properties>
 
     <dependencies>
+        <!--引入es的坐标-->
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.17.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>7.17.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-elasticsearch -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+            <version>2.5.2</version>
+        </dependency>
         <!--Spring boot Web容器-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
