--- a/eladmin/eladmin-system/pom.xml
+++ b/eladmin/eladmin-system/pom.xml
@@ -23,6 +23,12 @@
             <groupId>io.milvus</groupId>
             <artifactId>milvus-sdk-java</artifactId>
             <version>2.0.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-slf4j-impl</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- 代码生成模块 -->
         <dependency>
