--- a/eladmin/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin/eladmin-system/src/main/resources/config/application-dev.yml
@@ -5,11 +5,18 @@ mybatis-plus:
 
 #配置数据源
 spring:
+  elasticsearch:
+    rest:
+      uris: http://123.249.119.160:9200
+      username: elastic
+      password: 123456
+      connection-timeout: 5000
+      read-timeout: 5000
   datasource:
     druid:
       db-type: com.alibaba.druid.pool.DruidDataSource
       driverClassName: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-      url: jdbc:log4jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
+      url: jdbc:log4jdbc:mysql://${DB_HOST:10.129.218.54}:${DB_PORT:3306}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
       username: ${DB_USER:root}
       password: ${DB_PWD:123456}
       # 初始连接数
@@ -121,11 +128,3 @@ file:
   avatarMaxSize: 5
 
 
-spring:
-  elasticsearch:
-    rest:
-      uris: http://localhost:9200
-      username: elastic
-      password: 123456
-      connection-timeout: 5000
-      read-timeout: 5000
