--- a/eladmin/eladmin-system/pom.xml
+++ b/eladmin/eladmin-system/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>eladmin-system</artifactId>
     <name>核心模块</name>
 
+    <repositories>
+        <repository>
+            <id>scijava.public</id>
+            <url>https://maven.scijava.org/content/groups/public</url>
+        </repository>
+    </repositories>
+
     <properties>
         <jjwt.version>0.11.5</jjwt.version>
         <!-- oshi监控需要指定jna版本, 问题详见 https://github.com/oshi/oshi/issues/1040 -->
@@ -19,16 +26,31 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+
         <dependency>
             <groupId>io.milvus</groupId>
             <artifactId>milvus-sdk-java</artifactId>
-            <version>2.2.9</version>
+            <version>2.3.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.logging.log4j</groupId>
                     <artifactId>log4j-slf4j-impl</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.lejon.T-SNE-Java/tsne -->
+        <!-- https://mvnrepository.com/artifact/org.renjin.cran/tsne -->
+
+        <dependency>
+            <groupId>com.github.lejon</groupId>
+            <artifactId>T-SNE-Java</artifactId>
+            <version>v2.6.3</version>
         </dependency>
         <!-- 代码生成模块 -->
         <dependency>
@@ -77,6 +99,11 @@
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-neo4j</artifactId>
         </dependency>
 
         <!-- linux的管理 -->
