--- a/eladmin/pom.xml
+++ b/eladmin/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
             <version>2.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>2.1.0</version>
+        </dependency>
         <!--Spring boot Web容器-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
