--- a/eladmin/pom.xml
+++ b/eladmin/pom.xml
@@ -15,6 +15,8 @@
         <module>eladmin-system</module>
         <module>eladmin-tools</module>
         <module>eladmin-generator</module>
+        <module>eladmin-ddd</module>
+        <module>eladmin-ddd-dataset</module>
     </modules>
 
     <name>ELADMIN 后台管理</name>
