feat: 完善大部分核心功能

--- a/eladmin/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin/eladmin-system/src/main/resources/config/application-dev.yml
@@ -118,8 +118,8 @@ file:
     path: /Users/liukunkun/Desktop/dev/save/
     avatar: ~/avatar/
   linux:
-    path: /home/eladmin/file/
-    avatar: /home/eladmin/avatar/
+    path: /home/luckkun/桌面/saves/
+    avatar: /home/luckkun/桌面/saves/avatar/
   windows:
     path: C:\eladmin\file\
     avatar: C:\eladmin\avatar\
